fix padding on reviews container + scrollbar y

--- a/client/src/modules/Course/Styles/Course.module.css
+++ b/client/src/modules/Course/Styles/Course.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
+  height: 100%;
 }
 
 .overview {
@@ -45,7 +46,7 @@
     flex-flow: row nowrap;
     justify-content: space-between;
 
-    padding: 5% 2% 1% 2%;
+    padding: 3% 3% 1% 3%;
 
     & > :first-child {
       flex: 0 0 35%;
@@ -108,6 +109,7 @@
 .reviewscontainer {
   width: 100%;
   max-width: 1440px;
+  height: 100%;
 
   padding: 5% 2%;
 
@@ -118,10 +120,12 @@
 
 .bar {
   width: 100%;
+  max-width: 1006px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   padding-bottom: 50px;
+  margin: 0 auto;
 }
 
 .filtertext {
@@ -130,9 +134,31 @@
 
 .reviews {
   width: 100%;
+  padding: 0 20px;
   display: flex;
   flex-flow: column nowrap;
-  gap: 50px;
+  overflow-y: scroll;
+  height: 150vh;
+
+  /* <=== SCROLL BAR ===> */
+
+  /* Change scrollbar track color (background) */
+  ::-webkit-scrollbar-track {
+    background: #ececec; /* Change to your desired background color */
+    border-radius: 13.573px;
+  }
+
+  /* Change scrollbar thumb color (the draggable part) */
+  ::-webkit-scrollbar-thumb {
+    background: #807b7b; /* Change to your desired thumb color */
+    border-radius: 13.573px;
+  }
+
+  /* Change scrollbar width and height */
+  ::-webkit-scrollbar {
+    width: 6px; /* Change to your desired width */
+    height: 10px; /* Change to your desired height */
+  }
 }
 
 .fixedreviewbutton {
